# pre-commit-check-hooks

./: .envrc  .envrc.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .sqlfluff_bigquery  LICENSE  README.md  setup.cfg  setup.py
hooks/: __init__.py  dialect_config.py  naming_utils.py  test-pwd-hook.py  validate_schema.py
test-repo/: .pre-commit-config.yaml
tests/: test_required_fields.py
tests/required_fields/bq/: missing_field.json  valid_any_position.json  wrong_order.json  wrong_position_begin.json  wrong_position_end.json
tests/schema_validation/bq/: empty_required_fields.json  invalid_record_structure.json  invalid_types_and_modes.json  malformed_json.json  missing_required_fields.json  not_array_schema.json  number_in_fieldname.json  valid_bigquery_schema.json  wrong_naming_convention.json
