[metadata]
name = pre_commit_check_hooks
version = file: VERSION
description = Pre-commit hooks for checking code quality without modifications
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Hernan-V/pre-commit-check-hooks
author = Hernan Valenzuela
author_email = hernan.valenzuela@example.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Quality Assurance
    Intended Audience :: Developers

[options]
packages = find:
install_requires =
    case-converter>=1.1.0
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    validate-schema = hooks.validate_schema:main

[bdist_wheel]
universal = True